--- a/src/components/BooleanEditor/BooleanEditor.scss
+++ b/src/components/BooleanEditor/BooleanEditor.scss
@@ -6,7 +6,7 @@
  * the root directory of this source tree.
  */
 .editor {
-  background: white;
+  background: black;
   white-space: nowrap;
   box-shadow: 0 1px 4px rgba(0,0,0,0.4);
 
