--- a/src/components/Chip/Chip.scss
+++ b/src/components/Chip/Chip.scss
@@ -17,7 +17,7 @@
   padding: 4px;
   margin: 4px;
   font-size: 14px;
-  color: #0e69a1;
+  color: #38ffe4;
   font-family: "Open Sans", sans-serif;
   white-space: nowrap;
   align-items: center;
