--- a/src/components/DateTimePicker/DateTimePicker.scss
+++ b/src/components/DateTimePicker/DateTimePicker.scss
@@ -9,7 +9,7 @@
 
 .picker {
   border: 1px solid $blue;
-  background: white;
+  background: $black;
 
   > *:first-child {
     margin: 10% auto 4% auto;
