--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -25,7 +25,7 @@
 .menu {
   max-height: 215px;
   border: 1px solid $blue;
-  background: white;
+  background: #343445;
   overflow: auto;
 
   button {
