--- a/src/components/FileEditor/FileEditor.scss
+++ b/src/components/FileEditor/FileEditor.scss
@@ -8,7 +8,7 @@
 @import 'stylesheets/globals.scss';
 
 .editor {
-  background: white;
+  background: $black;
   white-space: nowrap;
   box-shadow: 0 1px 4px rgba(0,0,0,0.4);
   padding: 6px;
