--- a/src/components/FileTree/FileTree.scss
+++ b/src/components/FileTree/FileTree.scss
@@ -6,7 +6,7 @@
  * the root directory of this source tree.
  */
 .directory, .file {
-  color: #8fb9cf;
+  color: #38ffe4;
   height: 20px;
   line-height: 20px;
   font-size: 12px;
@@ -16,7 +16,7 @@
 .directory {
   svg {
     vertical-align: middle;
-    fill: #8fb9cf;
+    fill: #38ffe4;
     margin-right: 6px;
   }
 
