--- a/src/components/Pill/Pill.scss
+++ b/src/components/Pill/Pill.scss
@@ -11,7 +11,7 @@
   @include MonospaceFont;
   position: relative;
   display: inline-block;
-  color: #0E69A1;
+  color: #38ffe4;
   height: 20px;
   line-height: 20px;
   border-radius: 10px;
