--- a/src/components/PushOpenRate/PushOpenRate.scss
+++ b/src/components/PushOpenRate/PushOpenRate.scss
@@ -45,7 +45,7 @@
 
 .blue {
   color: $blue;
-  background: white;
+  background: $black;
 }
 
 .blue_inv {
@@ -55,7 +55,7 @@
 
 .pink {
   color: $pink;
-  background: white;
+  background: $black;
 }
 
 .pink_inv {
@@ -65,7 +65,7 @@
 
 .yellow {
   color: $yellow;
-  background: white;
+  background: $black;
 }
 
 .yellow_inv {
