--- a/src/components/BrowserCell/BrowserCell.scss
+++ b/src/components/BrowserCell/BrowserCell.scss
@@ -10,11 +10,11 @@
   overflow: hidden;
   text-overflow: ellipsis;
   cursor: default;
-  color: #0E69A1;
+  color: #38ffe4;
   height: 30px;
   line-height: 20px;
   padding: 5px;
-  border-right: 1px solid #e3e3ea;
+  border-right: 1px solid #505050;
 }
 
 .empty {
