--- a/src/components/BrowserMenu/BrowserMenu.scss
+++ b/src/components/BrowserMenu/BrowserMenu.scss
@@ -16,7 +16,7 @@
   padding: 8px;
 
   svg {
-    fill: #66637A;
+    fill: #38ffe4;
   }
 
   &:hover {
@@ -27,10 +27,10 @@
 
   &.disabled {
     cursor: not-allowed;
-    color: #66637A;
+    color: #38ffe4;
 
     &:hover svg {
-      fill: #66637A;
+      fill: #38ffe4;
     }
   }
 
@@ -45,7 +45,7 @@
 }
 
 .title {
-  background: #797592;
+  background: #ae37a8;
   padding: 8px;
   border-radius: 5px 5px 0 0;
 
@@ -84,7 +84,7 @@
   top: 30px;
   right: 0;
   border-radius: 5px 0 5px 5px;
-  background: #797592;
+  background: #ae37a8;
   padding: 8px 0;
   font-size: 14px;
 }
@@ -96,11 +96,12 @@
   color: white;
 
   &:hover {
-    background: $blue;
+    background: $mm-green;
+    color: $mm-pink
   }
 
   &.disabled {
-    color: rgba(0,0,0,0.2);
+    color: rgba(0, 0, 0, 0.329);
     cursor: not-allowed;
 
     &:hover {
