--- a/src/components/Calendar/Calendar.scss
+++ b/src/components/Calendar/Calendar.scss
@@ -8,7 +8,7 @@
 @import 'stylesheets/globals.scss';
 
 .calendar {
-  background: white;
+  background: $black;
   color: $blue;
   width: 182px;
   height: auto;
@@ -123,7 +123,7 @@
   }
 
   .selected ~ button {
-    background: white;
+    background: $black;
   }
 }
 
