--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -20,7 +20,7 @@
   width: 20px;
   padding: 3px;
   border-radius: 4px;
-  background: white;
+  background: $black;
   vertical-align: middle;
   border: 1px solid $mainTextColor;
 
