--- a/src/components/ColumnsConfiguration/ColumnsConfiguration.scss
+++ b/src/components/ColumnsConfiguration/ColumnsConfiguration.scss
@@ -6,7 +6,7 @@
   padding: 0 8px;
 
   svg {
-    fill: #66637A;
+    fill: #38ffe4;
   }
 
   &:hover svg {
@@ -15,17 +15,17 @@
 
   &.disabled {
     cursor: not-allowed;
-    color: #66637A;
+    color: #38ffe4;
 
     &:hover svg {
-      fill: #66637A;
+      fill: #38ffe4;
     }
   }
 }
 
 .title {
   margin-top: -4px;
-  background: #797691;
+  background: #ae37a8;
   padding: 4px 8px;
   border-radius: 5px 5px 0 0;
 
@@ -63,7 +63,7 @@
   top: 22px;
   right: 0;
   border-radius: 5px 0 5px 5px;
-  background: #797691;
+  background: #ae37a8;
   width: 320px;
   font-size: 14px;
 
