--- a/src/components/DataBrowserHeaderBar/DataBrowserHeaderBar.scss
+++ b/src/components/DataBrowserHeaderBar/DataBrowserHeaderBar.scss
@@ -12,7 +12,7 @@
   top: 0;
   left: 0;
   height: 30px;
-  background: #66637a;
+  background: #38ffe4;
   white-space: nowrap;
   display: inline-block;
   min-width: 100%;
