--- a/src/components/Field/Field.scss
+++ b/src/components/Field/Field.scss
@@ -13,7 +13,7 @@
   border-color: $borderGrey;
   border-width: 1px 1px 0 1px;
   min-height: 80px;
-  background: white;
+  background: $black;
 
   &:last-of-type {
     border-bottom-width: 1px;
@@ -42,7 +42,7 @@
   min-height: 80px;
   text-align: right;
   padding: 0;
-  background: #f6fafb;
+  background: #black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,6 +58,6 @@
   }
 
   & ~ .field {
-    background: #f5f5f7;
+    background: $black;
   }
 }
