--- a/src/components/Fieldset/Fieldset.scss
+++ b/src/components/Fieldset/Fieldset.scss
@@ -25,7 +25,7 @@
   text-align: center;
   font-size: 14px;
   line-height: 16px;
-  color: $mainTextColor;
+  color: $mm-green;
   width: 500px;
   margin: 0 auto 16px auto;
 }
