--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -14,21 +14,44 @@
   margin-left: -175px;
   text-align: center;
   width: 350px;
+  
+}
+
+img{
+  // width:100%;
+  max-width:80px
+}
+
+.mmname{
+  color:$mm-green;
+  font-size: 40px;
+  img{
+    width: 350px;
+    height: 180px;
+    max-width: 400px;
+  }
+}
+
+.logo{
+  width: 150px;
 }
 
 .form {
   margin-top: 30px;
+  border:2px solid $mm-green;
+  border-radius: 7px;  
+  background: $black;
 }
 
 .header {
   height: 50px;
   line-height: 50px;
   border-radius: 5px 5px 0 0;
-  color: $blue;
+  color: $mm-green;
   font-size: 16px;
   font-weight: 700;
   text-align: center;
-  background: white;
+  background: $black;
   border-bottom: 1px solid #e0e0e1;
 }
 
@@ -38,7 +61,7 @@
   height: 40px;
   padding: 10px 0;
   width: 100%;
-  background: white;
+  background: $black;
   border-radius: 0 0 5px 5px;
   color: #c1c0c9;
   font-size: 12px;
@@ -56,20 +79,22 @@
 .submit {
   @include NotoSansFont;
   display: block;
-  background: $green;
+  background: none;
   height: 42px;
   width: 100%;
   font-size: 16px;
   line-height: 42px;
   border-radius: 5px;
-  color: white;
+  color: $mm-green;
   margin-top: 15px;
   outline: none;
-  border: none;
+  border: 2px solid $mm-green;
   cursor: pointer;
 
   &:hover, &:focus {
-    background: $darkGreen;
+    border:2px solid $mm-green;
+    background: $mm-green;
+    color: $mm-pink;
   }
 
   &:disabled {
