--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -13,7 +13,7 @@
   top: 50%;
   left: 50%;
   width: 540px;
-  background: white;
+  background: $black;
   border-radius: 5px;
   overflow: hidden;
   transition: width 0.5s cubic-bezier(1, 0, 0, 1);
