--- a/src/components/ProtectedFieldsDialog/ProtectedFieldsDialog.scss
+++ b/src/components/ProtectedFieldsDialog/ProtectedFieldsDialog.scss
@@ -25,7 +25,7 @@ $permissionsDialogWidth: calc(
   top: 50%;
   left: 50%;
   width: $permissionsDialogWidth;
-  background: white;
+  background: $black;
   border-radius: 5px;
   overflow: hidden;
   transition: width 0.3s 0.15s ease-out;
@@ -44,7 +44,7 @@ $permissionsDialogWidth: calc(
 .level {
   height: 50px;
   width: $permissionsDialogWidth; //   width: 658px;
-  background: #0e69a1;
+  background: #38ffe4;
   position: relative;
   color: white;
   transition: width 0.3s 0.15s ease-out;
@@ -137,7 +137,7 @@ $permissionsDialogWidth: calc(
 
 .row.public {
   background: rgba(22, 156, 238, 0.18);
-  border-bottom: 1px solid #0e69a1;
+  border-bottom: 1px solid #38ffe4;
   color: $blue;
 }
 
@@ -222,7 +222,7 @@ $permissionsDialogWidth: calc(
   user-select: text;
 }
 .prefix {
-  color: #0e69a1;
+  color: #38ffe4;
 }
 
 .suggestions {
