--- a/src/components/PushAudienceDialog/InstallationCondition.scss
+++ b/src/components/PushAudienceDialog/InstallationCondition.scss
@@ -28,7 +28,7 @@
 .date {
   input {
     position: relative;
-    background: #f6fafb;
+    background: #black;
     font-size: 16px;
     height: 80px;
     width: 100%;
