--- a/src/components/PushAudiencesSelector/PushAudiencesSelector.scss
+++ b/src/components/PushAudiencesSelector/PushAudiencesSelector.scss
@@ -16,8 +16,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    color: white;
-    background: #66637A;
+    color: $mm-pink;
+    background: #38ffe4;
     padding: 8px 20px 6px 20px;
     font-size: 14px;
   }
