--- a/src/components/RadioButton/RadioButton.scss
+++ b/src/components/RadioButton/RadioButton.scss
@@ -37,7 +37,7 @@
       width: 0;
       height: 0;
       border-radius: 100%;
-      background: white;
+      background: $black;
 
       top: 50%;
       left: 50%;
