--- a/src/components/SlowQueriesFilter/SlowQueriesFilter.scss
+++ b/src/components/SlowQueriesFilter/SlowQueriesFilter.scss
@@ -16,7 +16,7 @@
   padding: 8px;
 
   svg {
-    fill: #66637A;
+    fill: #38ffe4;
   }
 
   &:hover svg {
@@ -38,7 +38,7 @@
 }
 
 .title {
-  background: #797691;
+  background: #ae37a8;
   padding: 8px;
   border-radius: 5px 5px 0 0;
 
@@ -73,7 +73,7 @@
   top: 30px;
   right: 0;
   border-radius: 5px 0 5px 5px;
-  background: #797691;
+  background: #ae37a8;
   width: 470px;
   font-size: 14px;
 }
@@ -105,5 +105,5 @@
 }
 
 .active .row input {
-  background: #0E69A1;
+  background: #38ffe4;
 }
