--- a/src/components/TextInput/TextInput.scss
+++ b/src/components/TextInput/TextInput.scss
@@ -11,12 +11,13 @@
   @include NotoSansFont;
   border: 0;
   outline: 0;
-  background: $inputBackgroundColor;
+  background: $black;
   font-size: 16px;
   width: 100%;
   padding: 6px;
   vertical-align: top;
   resize: vertical;
+  color:$mm-green;
 
   &:focus {
     @include placeholder {
