--- a/src/components/Toolbar/Toolbar.scss
+++ b/src/components/Toolbar/Toolbar.scss
@@ -12,9 +12,9 @@
   top: 0;
   right: 0;
   left: 300px;
-  background: #353446;
+  background: #000000;
   height: 96px;
-  color: white;
+  color: #38ffe4;
   z-index: 5;
 }
 
