--- a/src/dashboard/TableView.scss
+++ b/src/dashboard/TableView.scss
@@ -12,7 +12,7 @@
   top: 96px;
   left: 300px;
   right: 0;
-  background: #66637A;
+  background: #070707;
   height: 30px;
   white-space: nowrap;
 }
@@ -38,19 +38,19 @@ body:global(.expanded) {
 }
 
 .rows {
-  background: #fdfafb;
+  background: #111111;
 
   table {
     width: 100%;
   }
 
   tr {
-    background: #fdfafb;
+    background: #111111;
     border-bottom: 1px solid $borderGrey;
   }
 
   tr:nth-child(2n) {
-    background: #f4f5f7;
+    background: #222222;
   }
 
   td {
