--- a/src/login/Login.scss
+++ b/src/login/Login.scss
@@ -8,14 +8,14 @@
 @import 'stylesheets/globals.scss';
 
 .message {
-  background: #f9f9fa;
+  background: #000;
   height: 50px;
   padding: 10px;
   font-size: 13px;
 }
 
 .error {
-  background: #f9f9fa;
+  background: #000;
   height: 50px;
   line-height: 50px;
   overflow: hidden;
@@ -24,5 +24,5 @@
 }
 
 body {
-  background: #0c5582;
+  background: #000;
 }
