--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -47,12 +47,12 @@ img{
   height: 50px;
   line-height: 50px;
   border-radius: 5px 5px 0 0;
-  color: $mm-green;
+  color: $mm-pink;
   font-size: 16px;
   font-weight: 700;
   text-align: center;
   background: $black;
-  border-bottom: 1px solid #e0e0e1;
+  border-bottom: 1px solid #000;
 }
 
 .footer {
