--- a/src/components/LoginRow/LoginRow.scss
+++ b/src/components/LoginRow/LoginRow.scss
@@ -9,12 +9,12 @@
   display: block;
   position: relative;
   height: 50px;
-  border-bottom: 1px solid #e0e0e1;
+  border-bottom: 1px solid #000;
 }
 
 .label {
   width: 110px;
-  background: #f9f9fa;
+  background: #000;
   font-size: 13px;
   font-weight: 700;
   height: 49px;
@@ -27,7 +27,7 @@
 .input {
   margin-left: 110px;
   height: 49px;
-  background: #f0f4f6;
+  background: #000;
 
   input {
     display: block;
@@ -39,6 +39,7 @@
     padding: 0 6px;
     width: 100%;
     font-size: 13px;
+    color:#38ffe4;
 
     &:focus {
       background: rgba(6,40,61,0.1);
